# ttengine

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
src/engine/: CMakeLists.txt
src/engine/linux/: common.mk  shared_rules.mk
src/engine/linux/inc/tt/platform/: tt_compile_time_error.h  tt_types.h
src/engine/linux/inc/tt/profiler/: MemoryProfilerConstants.h  PerformanceProfilerConstants.h
src/engine/linux/prebuilt/SDL2/lib64/: libSDL2-2.0.so.0.4.0
src/engine/osx/: generate_revision_info.sh
src/engine/osx/_osx_libs.xcodeproj/: project.pbxproj
src/engine/osx/_osx_libs.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/engine/osx/inc/crystal/: CrystalAchievements.h  CrystalLeaderboards.h  CrystalPlayer.h  CrystalSession+PullTab.h  CrystalSession.h  CrystalVirtualGoods.h
src/engine/osx/prebuilt/SDL2/: libSDL2.dylib
src/engine/osx/prebuilt/openal/: libopenal.1.17.2.dylib  libopenal.1.dylib  libopenal.dylib
src/engine/osx/prebuilt/steam/: libsdkencryptedappticket.dylib  libsteam_api.dylib
src/engine/shared/inc/Gwen/: BaseRender.h  ControlList.h  Exports.h  Gwen.h  Hook.h  Macros.h  Structures.h  TextObject.h  Texture.h  ToolTip.h  UserData.h  WindowProvider.h
src/engine/shared/inc/SDL2/: SDL_config.h  SDL_config_linux.h
src/engine/shared/inc/al/: alut.h
src/engine/shared/inc/glloadgen/: gl_2_1.h
src/engine/shared/inc/json/: config.h  forwards.h  value.h
src/engine/shared/inc/libpng/: png.h  pnglibconf.h  pngpriv.h  pngstruct.h
src/engine/shared/inc/libz/: deflate.h  gzguts.h  zconf.h  zlib.h  zutil.h
src/engine/shared/inc/lodepng/: SDL_LodePNG.h  lodepng.h
src/engine/shared/inc/ogg/: oggmem.h  os_types.h
src/engine/shared/inc/spark/: SPK.h
src/engine/shared/inc/sqlite/: sqlite3ext.h
src/engine/shared/inc/squirrel/: sqbind.h  sqconfig.h  sqmethods.inc  squirrel.h
src/engine/shared/inc/steam/: steam_api_interop.cs  steamworks_sdk_release_notes.txt
src/engine/shared/inc/unittestpp/: config.h
src/engine/shared/inc/visualboy/: VisualBoy.h
src/engine/shared/inc/vorbis/: vorbisfile.h
src/engine/shared/src/glloadgen/: gl_2_1.c
src/engine/shared/src/gwen/: Anim.cpp  BaseRender.cpp  ControlList.cpp  DragAndDrop.cpp  Gwen.cpp  Hook.cpp  Skin.cpp  ToolTip.cpp  Utility.cpp  events.cpp  inputhandler.cpp
src/engine/shared/src/json/: json_batchallocator.h  json_internalarray.inl  json_reader.cpp  json_value.cpp  json_writer.cpp
src/engine/shared/src/libpng/: png.c  pngerror.c  pngget.c  pngmem.c  pngpread.c  pngread.c  pngrio.c  pngrtran.c  pngrutil.c  pngset.c  pngtrans.c  pngwio.c  pngwrite.c  pngwtran.c  pngwutil.c
src/engine/shared/src/libz/: adler32.c  compress.c  crc32.c  deflate.c  gzclose.c  gzlib.c  gzread.c  gzwrite.c  infback.c  inffast.c  inflate.c  inftrees.c  trees.c  uncompr.c  zutil.c
src/engine/shared/src/lodepng/: README  SDL_LodePNG.c
src/engine/shared/src/ogg/: bitwise.c  framing.c  oggmem.cpp
src/engine/shared/src/recastnavigation/: Doxyfile  ttsdk_generate_doxy_docs.bat
src/engine/shared/src/spark/: SPK_All.cpp  SPK_DX9_All.cpp
src/engine/shared/src/squirrel/: sqapi.cpp  sqarray.h  sqassert.h  sqbind.cpp  sqclass.cpp  sqclass.h  sqcompiler.cpp  sqdebug.cpp  sqfuncproto.h  sqfuncstate.cpp  sqlexer.cpp  sqmem.cpp  sqmem.h  sqobject.cpp  sqobject.h  sqpcheader.h  sqstate.cpp  sqstate.h  sqtable.cpp  squtils.h  sqvm.cpp  sqvm.h
src/engine/shared/src/visualboy/: VisualBoy.cpp
src/engine/shared/src/vorbis/: analysis.c  bitrate.c  block.c  codebook.c  envelope.c  floor0.c  floor1.c  info.c  lookup.c  lpc.c  lsp.c  mapping0.c  mdct.c  os.h  psy.c  psy.h  res0.c  sharedbook.c  smallft.c  synthesis.c  vorbisenc.c  vorbisfile.c
src/engine/shared/unittest_inc/unittest/: unittest.cpp  unittest.h
src/engine/windows/: assert.vcxproj  assert.vcxproj.filters  engine.vcxproj  engine.vcxproj.filters  gwen.vcxproj  gwen.vcxproj.filters  json_cpp.vcxproj  json_cpp.vcxproj.filters  libpng.vcxproj  libpng.vcxproj.filters  libz.vcxproj  libz.vcxproj.filters  math.vcxproj  math.vcxproj.filters  menu.vcxproj  menu.vcxproj.filters  ogg.vcxproj  ogg.vcxproj.filters  platform.vcxproj  platform.vcxproj.filters  recastnavigation.vcxproj  recastnavigation.vcxproj.filters  shared.vcxproj  shared.vcxproj.filters  spark.vcxproj  spark.vcxproj.filters  squirrel.vcxproj  squirrel.vcxproj.filters  sys.vcxproj  sys.vcxproj.filters  unittest.vcxproj  unittest.vcxproj.filters  unittestpp.vcxproj  unittestpp.vcxproj.filters  visualboy.vcxproj  visualboy.vcxproj.filters  vorbis.vcxproj  vorbis.vcxproj.filters
src/engine/windows/prebuilt/boost/: libboost_filesystem-vc140-mt-1_63.lib  libboost_system-vc140-mt-1_63.lib  libboost_system-vc140-mt-gd-1_63.lib
src/engine/windows/prebuilt/steam/: sdkencryptedappticket.lib  sdkencryptedappticket64.lib
src/engine/windows/unittest/: main.cpp
src/game/: CMakeLists.txt
src/game/mac/res/: Info_mac.plist  Info_steam.plist  MainMenu.xib  sandbox.entitlements
src/game/mac/src/: ClientObjCApp.h  ClientObjCApp.mm  main.mm  prefix.pch
src/game/mac/src/appstore/: receipt_validation.h
src/game/mac/src/audio/: AudioPlayerMac.cpp
src/game/mac/src/input/: Controller.cpp
src/game/osx/src/audio/: AudioPlayerOSX.cpp
src/game/osx_sdl2/res/: Info.plist.in
src/game/sdl2/src/: main.cpp
src/game/sdl2/src/input/: Controller.cpp
src/game/shared/: shared.vcxproj  shared.vcxproj.filters
src/game/shared/inc/toki/: AppGlobal.h  AppMain.h  AppOptions.h  ScreenshotSettings.h  SharedGraphics.h  cfg.h  constants.h  pch.h
src/game/shared/src/toki/: AppGlobal.cpp  AppMain.cpp  AppOptions.cpp  SharedGraphics.cpp  cfg.cpp  pch.cpp
src/game/windows/: convert_level.vcxproj  windows.vcxproj  windows.vcxproj.filters
src/game/windows/res/: visualstyle.manifest
src/game/windows/src/: SourceItemLevel.cpp  SourceItemLevel.h  application.rc  application.rc2  main.cpp  main_converter.cpp  resource.h  seh_main.cpp
src/game/windows/src/audio/: AudioPlayerWin.cpp  constants_win.h
src/game/windows/src/input/: Controller.cpp
src/game/windows_sdl2/src/audio/: AudioPlayerWin.cpp
(+2991 files in other folders)
